welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:24: error: type mismatch;
 found   : Unit
 required: Boolean
			if (compteur=0)
                                    ^